// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onPostBuild should generate \`robots.txt\` using \`graphql\` options 1`] = `
"User-agent: *
Allow: /
Sitemap: https://www.test.com/sitemap.xml
Host: https://www.test.com
"
`;

exports[`onPostBuild should generate \`robots.txt\` using options 1`] = `
"User-agent: *
Allow: /
Sitemap: https://www.test1.com/sitemap.xml
Host: https://www.test1.com
"
`;
